--- a/.github/workflows/dependency-updates.yml
+++ b/.github/workflows/dependency-updates.yml
@@ -2,13 +2,13 @@ name: Dependency Updates
 
 on:
   schedule:
-    - cron: '0 9 * * 1' # Every Monday at 9 AM
+    - cron: "0 9 * * 1" # Every Monday at 9 AM
   workflow_dispatch:
 
 jobs:
   update-dependencies:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -18,8 +18,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
 
       - name: Update dependencies
         run: |
@@ -36,11 +36,11 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: 'chore: update dependencies'
-          title: 'chore: automated dependency updates'
+          commit-message: "chore: update dependencies"
+          title: "chore: automated dependency updates"
           body: |
             Automated dependency updates by GitHub Actions.
-            
+
             Please review the changes and ensure all tests pass.
           branch: automated/dependency-updates
           delete-branch: true
