--- a/.github/workflows/update-progress.yml
+++ b/.github/workflows/update-progress.yml
@@ -51,8 +51,9 @@ jobs:
             echo "" >> PROGRESS.md
           fi
 
+          PR_LINK="[#${{ github.event.pull_request.number }}](${{ github.event.pull_request.html_url }})"
           echo "### PR #${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}" >> PROGRESS.md
-          echo "${{ env.summary }}" >> PROGRESS.md
+          echo "${{ env.summary }} ($PR_LINK)" >> PROGRESS.md
           echo "" >> PROGRESS.md
 
           cat PROGRESS.md
