--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.545.0",
     "next": "15.3.5",
+    "next-intl": "^4.3.12",
     "nextra": "^4.6.0",
     "nextra-theme-docs": "^4.6.0",
     "react": "^19.0.0",
