--- a/.github/workflows/ci-with-preview.yaml
+++ b/.github/workflows/ci-with-preview.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Add ok-to-test for trusted kubestellar team members
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.ORG_TOKEN }} # Must have read:org (and repo if private)
+          github-token: ${{ secrets.ORG_TOKEN }}   # used for team membership check
           script: |
             const org = 'kubestellar';
             const teams = ['kubestellar-contributors', 'kubestellar-docs'];
@@ -55,22 +55,24 @@ jobs:
 
             for (const team of teams) {
               if (await isTeamMember(org, team, prAuthor)) {
-                try {
-                  await github.rest.issues.addLabels({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    issue_number: prNumber,
-                    labels: [label]
-                  });
-                  console.log(`🏷️ Added '${label}' for ${prAuthor} (member of @${org}/${team})`);
-                  return; // stop after first match
-                } catch (err) {
-                  console.error(`⚠️ Failed to label PR #${prNumber}: ${err.message}`);
-                }
+                // ✅ use built-in github client with the repo’s GITHUB_TOKEN
+                const gh = new github.constructor({
+                  auth: process.env.GITHUB_TOKEN
+                });
+                await gh.rest.issues.addLabels({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: prNumber,
+                  labels: [label]
+                });
+                console.log(`🏷️ Added '${label}' for ${prAuthor} using GITHUB_TOKEN`);
+                return;
               }
             }
 
             console.log(`🚫 ${prAuthor} not found in any trusted teams, skipping auto-label.`);
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   # ============================================================
   # 🔹 CI job (builds .next and uploads artifacts)
