--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-three/fiber": "^9.4.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.545.0",
+    "mermaid": "^11.12.1",
     "next": "15.3.5",
     "next-intl": "^4.3.12",
     "nextra": "^4.6.0",
