--- a/.github/workflows/daily-team-status.lock.yml
+++ b/.github/workflows/daily-team-status.lock.yml
@@ -44,7 +44,9 @@
 #   contents: read
 #   issues: read
 #   pull-requests: read
-# network: defaults
+# network:
+#   firewall: true
+# sandbox: awf
 # tools:
 #   github:
 # safe-outputs:
